ex3/testdata/typechecker/error/BinopTest-err1.java
class BinopTest {
	public static void main(String[] a){
            int x;
            x = true + 2; // TE
	}
}


